--- a/find.html
+++ b/find.html
@@ -110,7 +110,7 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅡㅠ</span>
+      <span>Your screen is too big ㅠㅠ</span>
     </div>
 
     <script
