--- a/find.html
+++ b/find.html
@@ -110,11 +110,7 @@
     </nav>
 
     <div id="no-mobile">
-<<<<<<< HEAD
-      <span>Your screen is too big ㅜㅡㅜ</span>
-=======
-      <span>Your screen is too big ㅠㅠ</span>
->>>>>>> experimental
+      <span>Your screen is too big ㅠㅡㅠ</span>
     </div>
 
     <script
